--- a/client/views/article/article.html
+++ b/client/views/article/article.html
@@ -8,7 +8,7 @@
           <h1 itemprop="name" name="title" class="post-title">{{title}}</h1>
           <h2 name="subtitle" class="post-field subtitle post-subtitle">{{tldr}}</h2>
           <ul class="post-item-meta">
-            <li class="post-item-meta-item"><a href="{{authorUrl}}" class="post-item-author link link-secondary" title="Go to the profile of {{getAuthor.profile.name}}"><img src="https://avatars1.githubusercontent.com/u/395093?s=140" class="avatar-icon post-item-meta-avatar" title="{{getAuthor.profile.name}}"><span>{{getAuthor.profile.name}}</span></a> &nbsp; &nbsp; &mdash; &nbsp; &nbsp; <a href="{{gistUrl}}" target="_blank" class="post-item-author link link-secondary" title="Go to the gist"><span>{{gistUrl}}</span></a></li>
+            <li class="post-item-meta-item"><a href="{{authorUrl}}" class="post-item-author link link-secondary" title="Go to the profile of {{getAuthor.profile.name}}"><img src="https://avatars1.githubusercontent.com/u/395093?s=140" class="avatar-icon post-item-meta-avatar" title="{{getAuthor.profile.name}}"><span>{{getAuthor.profile.name}}</span></a> <span class="dash">&nbsp; &nbsp; &mdash; &nbsp; &nbsp;</span> <a href="{{gistUrl}}" target="_blank" class="post-item-author link link-secondary" title="Go to the gist"><span>{{gistUrl}}</span></a></li>
           </ul>
         </header>
       </div>
