--- a/.scss/_mediaqueries.scss
+++ b/.scss/_mediaqueries.scss
@@ -59,11 +59,6 @@
       }
     }
   }
-  .socialShare {
-    a.button {
-      font-size: 22px;
-    }
-  }
   .post-content {
     font-size: 16px;
     h2 {
@@ -72,6 +67,17 @@
     }
     ul {
       padding-left: 1em;
+    }
+    .socialShare {
+      h2{
+        font-size: 1.2em;
+      }
+      h3{
+        font-size: 0.6em;
+      }
+      a.button {
+        font-size: 22px;
+      }
     }
   }
   .applicationFooter {
@@ -106,7 +112,7 @@
   }
   pre {
     code {
-      font-size: 16px;
+      font-size: 12px;
       &.hljs{
         padding: 1em;
       }
