--- a/.scss/style.scss
+++ b/.scss/style.scss
@@ -11,6 +11,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x:hidden;
 }
 .layout-single-column {
   max-width: 960px;
