--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -75,19 +75,21 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-/* line 15, ../.scss/style.scss */
+/* line 17, ../.scss/style.scss */
 .layout-single-column {
   max-width: 960px;
   margin: 0 auto;
 }
 
-/* line 19, ../.scss/style.scss */
+/* line 21, ../.scss/style.scss */
 .post-article {
   height: 100%;
 }
-/* line 21, ../.scss/style.scss */
+/* line 23, ../.scss/style.scss */
 .post-article .background-size-full {
   max-width: 100%;
   width: 100%;
@@ -95,7 +97,7 @@ body {
   position: relative;
 }
 
-/* line 29, ../.scss/style.scss */
+/* line 31, ../.scss/style.scss */
 .post-content {
   font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
   letter-spacing: .01rem;
@@ -104,30 +106,30 @@ body {
   font-size: 22px;
   line-height: 1.5;
 }
-/* line 36, ../.scss/style.scss */
+/* line 38, ../.scss/style.scss */
 .post-content h2 {
   padding-top: 64px;
 }
-/* line 39, ../.scss/style.scss */
+/* line 41, ../.scss/style.scss */
 .post-content p > code {
   font-family: 'Source Code Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #eeeeed;
   font-size: 0.8em;
   padding: 2px;
 }
-/* line 45, ../.scss/style.scss */
+/* line 47, ../.scss/style.scss */
 .post-content ul {
   list-style-type: circle;
   padding-left: 2em;
   margin-bottom: 1em;
 }
-/* line 48, ../.scss/style.scss */
+/* line 50, ../.scss/style.scss */
 .post-content ul > li {
   padding-left: 0.5em;
   padding-bottom: 0.5em;
 }
 
-/* line 56, ../.scss/style.scss */
+/* line 58, ../.scss/style.scss */
 .background-size-full {
   display: table;
   height: 100%;
@@ -138,27 +140,27 @@ body {
   position: relative;
 }
 
-/* line 66, ../.scss/style.scss */
+/* line 68, ../.scss/style.scss */
 #login-buttons {
   position: fixed;
   z-index: 999;
 }
 
-/* line 71, ../.scss/style.scss */
+/* line 73, ../.scss/style.scss */
 .cover {
   height: 400px;
   margin-bottom: 60px;
   color: white;
 }
-/* line 75, ../.scss/style.scss */
+/* line 77, ../.scss/style.scss */
 .cover header {
   margin-top: 160px;
 }
-/* line 77, ../.scss/style.scss */
+/* line 79, ../.scss/style.scss */
 .cover header .post-item-meta {
   margin-bottom: 20px;
 }
-/* line 81, ../.scss/style.scss */
+/* line 83, ../.scss/style.scss */
 .cover .post-title {
   letter-spacing: -0.02em;
   font-weight: 700;
@@ -168,7 +170,7 @@ body {
   line-height: 1.1;
   margin-bottom: 8px;
 }
-/* line 90, ../.scss/style.scss */
+/* line 92, ../.scss/style.scss */
 .cover .post-field.subtitle {
   letter-spacing: -0.02em;
   font-weight: 300;
@@ -179,18 +181,18 @@ body {
   margin: 0;
 }
 
-/* line 102, ../.scss/style.scss */
+/* line 104, ../.scss/style.scss */
 .article-list li {
   margin-bottom: 60px;
 }
 
-/* line 106, ../.scss/style.scss */
+/* line 108, ../.scss/style.scss */
 .post-item-meta {
   font-size: 14px;
   color: #b3b3b1;
 }
 
-/* line 110, ../.scss/style.scss */
+/* line 112, ../.scss/style.scss */
 .post-item-meta-avatar {
   display: inline-block;
   width: 30px;
@@ -200,7 +202,7 @@ body {
   margin-bottom: -10px;
 }
 
-/* line 119, ../.scss/style.scss */
+/* line 121, ../.scss/style.scss */
 .avatar-icon {
   width: 32px;
   height: 32px;
@@ -209,71 +211,71 @@ body {
   border-radius: 100%;
 }
 
-/* line 127, ../.scss/style.scss */
+/* line 129, ../.scss/style.scss */
 .story-cover-content .post-item-meta {
   letter-spacing: -0.02em;
   font-weight: 400;
   font-style: normal;
 }
 
-/* line 133, ../.scss/style.scss */
+/* line 135, ../.scss/style.scss */
 a {
   color: #888887;
   text-decoration: none;
 }
 
-/* line 138, ../.scss/style.scss */
+/* line 140, ../.scss/style.scss */
 .cover-header .post-item-meta {
   margin-top: 12px;
 }
 
-/* line 143, ../.scss/style.scss */
+/* line 145, ../.scss/style.scss */
 .logo {
   display: block;
   position: absolute;
 }
-/* line 146, ../.scss/style.scss */
+/* line 148, ../.scss/style.scss */
 .logo svg {
   display: block;
   width: 100%;
 }
 
-/* line 151, ../.scss/style.scss */
+/* line 153, ../.scss/style.scss */
 .cover {
   overflow: hidden;
 }
-/* line 153, ../.scss/style.scss */
+/* line 155, ../.scss/style.scss */
 .cover .logo {
   position: absolute;
   top: 0px;
   width: 50%;
   height: 160%;
 }
-/* line 158, ../.scss/style.scss */
+/* line 160, ../.scss/style.scss */
 .cover .logo svg {
   fill: #111;
 }
-/* line 162, ../.scss/style.scss */
+/* line 164, ../.scss/style.scss */
 .cover .cover-content {
   position: relative;
 }
-/* line 165, ../.scss/style.scss */
+/* line 167, ../.scss/style.scss */
 .cover a {
   position: relative;
 }
 
-/* line 171, ../.scss/style.scss */
+/* line 173, ../.scss/style.scss */
 .profile .avatar-icon {
   width: 140px;
   height: 140px;
 }
 
-/* line 182, ../.scss/style.scss */
+/* line 184, ../.scss/style.scss */
 .home .logo svg {
   fill: #333;
 }
 
-/* line 188, ../.scss/style.scss */
+/* line 190, ../.scss/style.scss */
 h1, h2 {
   font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -281,11 +283,11 @@ h1, h2 {
   padding: 0;
 }
 
-/* line 195, ../.scss/style.scss */
+/* line 197, ../.scss/style.scss */
 pre {
   margin-bottom: 1em;
 }
-/* line 196, ../.scss/style.scss */
+/* line 198, ../.scss/style.scss */
 pre code {
   font-family: 'Source Code Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
@@ -296,16 +298,16 @@ pre code {
   max-width: 960px;
   overflow: auto;
 }
-/* line 205, ../.scss/style.scss */
+/* line 207, ../.scss/style.scss */
 pre code.hljs {
   padding: 2em;
 }
-/* line 208, ../.scss/style.scss */
+/* line 210, ../.scss/style.scss */
 pre code span {
   font-weight: 400;
 }
 
-/* line 215, ../.scss/style.scss */
+/* line 217, ../.scss/style.scss */
 h2 {
   letter-spacing: -0.02em;
   font-weight: 700;
@@ -316,29 +318,29 @@ h2 {
   margin-bottom: 2px;
 }
 
-/* line 224, ../.scss/style.scss */
+/* line 226, ../.scss/style.scss */
 p {
   display: block;
   margin-bottom: 30px;
 }
 
-/* line 229, ../.scss/style.scss */
+/* line 231, ../.scss/style.scss */
 article {
   margin-bottom: 60px;
 }
 
-/* line 233, ../.scss/style.scss */
+/* line 235, ../.scss/style.scss */
 #disqus_thread {
   margin-bottom: 60px;
 }
 
-/* line 236, ../.scss/style.scss */
+/* line 238, ../.scss/style.scss */
 .homeLink {
   font-size: 12px;
   padding-left: 10px;
 }
 
-/* line 241, ../.scss/style.scss */
+/* line 243, ../.scss/style.scss */
 .applicationFooter {
   margin-top: 160px;
   border-collapse: collapse;
@@ -347,18 +349,18 @@ article {
   background-color: #ddddde;
   color: #777776;
 }
-/* line 248, ../.scss/style.scss */
+/* line 250, ../.scss/style.scss */
 .applicationFooter a {
   color: #333332;
 }
-/* line 251, ../.scss/style.scss */
+/* line 253, ../.scss/style.scss */
 .applicationFooter .footer-row {
   overflow: hidden;
   max-width: 960px;
   margin: 0px auto;
   position: relative;
 }
-/* line 256, ../.scss/style.scss */
+/* line 258, ../.scss/style.scss */
 .applicationFooter .footer-row section {
   position: relative;
   float: left;
@@ -371,7 +373,7 @@ article {
   height: 100%;
   padding: 3em;
 }
-/* line 261, ../.scss/style.scss */
+/* line 263, ../.scss/style.scss */
 .applicationFooter .footer-row section .subtitle {
   font-size: 16px;
   line-height: 22px;
@@ -380,16 +382,16 @@ article {
   color: #999998;
   margin-bottom: .5rem;
 }
-/* line 273, ../.scss/style.scss */
+/* line 275, ../.scss/style.scss */
 .applicationFooter .footer-row section.about {
   text-align: right;
 }
-/* line 276, ../.scss/style.scss */
+/* line 278, ../.scss/style.scss */
 .applicationFooter .footer-row section.join {
   border-left: solid 1px #bbb;
   float: right;
 }
-/* line 281, ../.scss/style.scss */
+/* line 283, ../.scss/style.scss */
 .applicationFooter .footer-row .logo {
   display: inline-block;
   width: 64px;
@@ -397,20 +399,20 @@ article {
   position: relative;
   margin-bottom: 3em;
 }
-/* line 287, ../.scss/style.scss */
+/* line 289, ../.scss/style.scss */
 .applicationFooter .footer-row .logo svg {
   fill: #444443;
 }
 
-/* line 294, ../.scss/style.scss */
+/* line 296, ../.scss/style.scss */
 .socialShare {
   text-align: center;
 }
-/* line 296, ../.scss/style.scss */
+/* line 298, ../.scss/style.scss */
 .socialShare h2 {
   font-size: 2em;
 }
-/* line 299, ../.scss/style.scss */
+/* line 301, ../.scss/style.scss */
 .socialShare a.button {
   font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -423,7 +425,7 @@ article {
   padding: 0.3em;
   border-radius: 0.15em;
 }
-/* line 310, ../.scss/style.scss */
+/* line 312, ../.scss/style.scss */
 .socialShare a.button.twitter {
   background-color: #00aced;
   color: white;
@@ -487,63 +489,70 @@ article {
     padding-left: 40px;
   }
 
-  /* line 63, ../.scss/_mediaqueries.scss */
-  .socialShare a.button {
-    font-size: 22px;
-  }
-
-  /* line 67, ../.scss/_mediaqueries.scss */
+  /* line 62, ../.scss/_mediaqueries.scss */
   .post-content {
     font-size: 16px;
   }
-  /* line 69, ../.scss/_mediaqueries.scss */
+  /* line 64, ../.scss/_mediaqueries.scss */
   .post-content h2 {
     padding-top: 24px;
     font-size: 24px;
   }
-  /* line 73, ../.scss/_mediaqueries.scss */
+  /* line 68, ../.scss/_mediaqueries.scss */
   .post-content ul {
     padding-left: 1em;
   }
+  /* line 72, ../.scss/_mediaqueries.scss */
+  .post-content .socialShare h2 {
+    font-size: 1.2em;
+  }
+  /* line 75, ../.scss/_mediaqueries.scss */
+  .post-content .socialShare h3 {
+    font-size: 0.6em;
+  }
+  /* line 78, ../.scss/_mediaqueries.scss */
+  .post-content .socialShare a.button {
+    font-size: 22px;
+  }
 
-  /* line 79, ../.scss/_mediaqueries.scss */
+  /* line 85, ../.scss/_mediaqueries.scss */
   .applicationFooter .footer-row section {
     float: none;
     display: block;
     width: 100%;
     padding: 2em;
   }
-  /* line 84, ../.scss/_mediaqueries.scss */
+  /* line 90, ../.scss/_mediaqueries.scss */
   .applicationFooter .footer-row section.about {
     text-align: center;
   }
-  /* line 87, ../.scss/_mediaqueries.scss */
+  /* line 93, ../.scss/_mediaqueries.scss */
   .applicationFooter .footer-row section.join {
     text-align: center;
     border-left: none;
     border-top: 1px solid #bbb;
   }
-  /* line 92, ../.scss/_mediaqueries.scss */
+  /* line 98, ../.scss/_mediaqueries.scss */
   .applicationFooter .footer-row section .logo {
     margin-bottom: 1em;
   }
 
-  /* line 99, ../.scss/_mediaqueries.scss */
+  /* line 105, ../.scss/_mediaqueries.scss */
   .profile .avatar-icon {
     width: 70px;
     height: 70px;
   }
 
-  /* line 104, ../.scss/_mediaqueries.scss */
+  /* line 110, ../.scss/_mediaqueries.scss */
   .dash {
     display: none;
   }
 
-  /* line 108, ../.scss/_mediaqueries.scss */
+  /* line 114, ../.scss/_mediaqueries.scss */
   pre code {
-    font-size: 16px;
+    font-size: 12px;
   }
-  /* line 110, ../.scss/_mediaqueries.scss */
+  /* line 116, ../.scss/_mediaqueries.scss */
   pre code.hljs {
     padding: 1em;
   }
